[gd_scene load_steps=15 format=2]

[ext_resource path="res://elementos/UI/minigame_senhorinha/Menu/moldura.png" type="Texture" id=1]
[ext_resource path="res://elementos/UI/minigame_senhorinha/Menu/Botoes_dificuldade/Botoes_sem_tipografia/Normal.png" type="Texture" id=2]
[ext_resource path="res://recursos/jogos/enchente/menu_de_opcoes/MenuOpcoesEnchente.gd" type="Script" id=3]
[ext_resource path="res://elementos/UI/minigame_senhorinha/Menu/Botoes_dificuldade/Botoes_sem_tipografia/Pressed.png" type="Texture" id=4]
[ext_resource path="res://recursos/feed_de_noticias/SeletorDeNiveis/TemaSeletorDeLevel.tres" type="Theme" id=5]
[ext_resource path="res://elementos/UI/minigame_senhorinha/Menu/Botoes_dificuldade/Botoes_sem_tipografia/Hovered.png" type="Texture" id=6]
[ext_resource path="res://elementos/UI/minigame_senhorinha/Menu/Botao_voltar/voltar_feed/Hovered.png" type="Texture" id=11]
[ext_resource path="res://elementos/imagem/imgs_menu_opcoes_enchente/Checked.png" type="Texture" id=12]
[ext_resource path="res://elementos/UI/minigame_senhorinha/Menu/Botao_voltar/voltar_feed/Normal.png" type="Texture" id=13]
[ext_resource path="res://elementos/imagem/imgs_menu_opcoes_enchente/Unchecked.png" type="Texture" id=14]
[ext_resource path="res://elementos/UI/minigame_senhorinha/Menu/Botao_voltar/voltar_feed/Pressed.png" type="Texture" id=15]
[ext_resource path="res://elementos/fontes/Lacquer-Regular.ttf" type="DynamicFontData" id=20]

[sub_resource type="DynamicFont" id=12]
size = 24
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=11]
size = 24
font_data = ExtResource( 20 )

[node name="MenuDeOpcoes" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )
voltarJogo = "res://recursos/feed_de_noticias/feed_de_noticia.tscn"

[node name="MenuDeOpcoes" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Transparencia" type="ColorRect" parent="MenuDeOpcoes"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 0.301961 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Menu" type="TextureRect" parent="MenuDeOpcoes"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -223.0
margin_right = 260.0
margin_bottom = 223.0
mouse_filter = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="VolumeMusica" type="HSlider" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.488462
anchor_top = 0.11435
anchor_right = 0.851923
anchor_bottom = 0.206278
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Titulo" type="Label" parent="MenuDeOpcoes/Menu/VolumeMusica"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.5
margin_top = -16.0001
margin_right = -114.5
margin_bottom = 17.9999
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Volume Música"
valign = 1

[node name="Porcentagem" type="Label" parent="MenuDeOpcoes/Menu/VolumeMusica"]
anchor_left = 0.809524
anchor_top = -0.317073
anchor_right = 0.994709
anchor_bottom = 0.414634
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "0%"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VolumeEfeitos" type="HSlider" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.488462
anchor_top = 0.237668
anchor_right = 0.851923
anchor_bottom = 0.329596
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Titulo" type="Label" parent="MenuDeOpcoes/Menu/VolumeEfeitos"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.5
margin_top = -16.0001
margin_right = -114.5
margin_bottom = 17.9999
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Volume Efeitos"
valign = 1

[node name="Porcentagem" type="Label" parent="MenuDeOpcoes/Menu/VolumeEfeitos"]
anchor_left = 0.809524
anchor_top = -0.292683
anchor_right = 0.994709
anchor_bottom = 0.439024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "0%"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VoltarJogar" type="TextureButton" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.0769231
anchor_top = 0.818386
anchor_right = 0.467308
anchor_bottom = 0.93722
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="MenuDeOpcoes/Menu/VoltarJogar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5001
margin_top = -19.5001
margin_right = 93.4999
margin_bottom = 14.4999
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "voltar ao jogo"
align = 1
valign = 1

[node name="VoltarMenuFeed" type="TextureButton" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.528846
anchor_top = 0.818386
anchor_right = 0.919231
anchor_bottom = 0.93722
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="MenuDeOpcoes/Menu/VoltarMenuFeed"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5001
margin_top = -19.5001
margin_right = 93.4999
margin_bottom = 14.4999
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "voltar ao feed"
align = 1
valign = 1

[node name="Controles" type="TextureButton" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.778846
anchor_top = 0.360987
anchor_right = 0.844231
anchor_bottom = 0.43722
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 12 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Titulo" type="Label" parent="MenuDeOpcoes/Menu/Controles"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -16.0001
margin_right = -163.0
margin_bottom = 17.9999
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Controles em tela"
valign = 1

[node name="facil" type="TextureButton" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.119231
anchor_top = 0.605382
anchor_right = 0.344231
anchor_bottom = 0.751122
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="MenuDeOpcoes/Menu/facil"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Fácil"
align = 1
valign = 1

[node name="medio" type="TextureButton" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.371154
anchor_top = 0.605382
anchor_right = 0.596154
anchor_bottom = 0.751122
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="MenuDeOpcoes/Menu/medio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Médio"
align = 1
valign = 1

[node name="dificil" type="TextureButton" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.625
anchor_top = 0.605382
anchor_right = 0.85
anchor_bottom = 0.751122
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="MenuDeOpcoes/Menu/dificil"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Difícil"
align = 1
valign = 1

[connection signal="button_up" from="MenuDeOpcoes/Menu/VoltarJogar" to="." method="_on_VoltarJogar_button_up"]
[connection signal="button_up" from="MenuDeOpcoes/Menu/VoltarMenuFeed" to="." method="_on_VoltarMenuFeed_button_up"]
